--- a/dp_flaski.yaml
+++ b/dp_flaski.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: flaskiSet
+  name: flaskiset
   labels:
     app: flaski
 spec:
