--- a/rs_flaski.yaml
+++ b/rs_flaski.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: ReplicaSet
 metadata:
-  name: flaskiSet
+  name: flaskiset
 spec:
   replicas: 2
   template:
